# ols-mcp

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  blog.md  main.py  pyproject.toml
src/ols_mcp/: __init__.py  __main__.py  client.py  models.py  server.py
